--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.13.1",
+    "@supabase/supabase-js": "^2.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-supabase": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
